<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/wellcome"/>


    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/userlogininput"
        android:fontFamily="@font/medium"
        android:textColorHint="@color/grey"
        android:background="@drawable/background_edittext"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="16dp"
        android:singleLine="true"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@color/black"
        app:passwordToggleTint="@color/black"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:gravity="center_vertical"
            android:paddingVertical="1dp"
            android:layout_gravity="center_vertical"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword"
        android:fontFamily="@font/medium"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_gravity="right"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/medium"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/medium"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="41dp"/>
</LinearLayout>