<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginVertical="10dp"
            android:padding="5dp"
            android:src="@drawable/backicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register2"
            android:textSize="20sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnGoogleAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/google_logo"
                android:padding="16dp"
                android:text="Sign in with Google"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTitle" />


            <ImageView
                android:id="@+id/registerTitle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:src="@drawable/wellcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_edittext"
                android:fontFamily="@font/medium"
                android:hint="@string/inputmail"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/btnGoogleAuth"
                tools:layout_editor_absoluteX="16dp" />
            <EditText
                android:id="@+id/createUserName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/background_edittext"
                android:fontFamily="@font/medium"
                android:hint="@string/createUsername"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/inputMail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginHorizontal="16dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/grey"
                app:passwordToggleTint="@color/grey"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/createUserName"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:fontFamily="@font/medium"
                    android:hint="@string/createPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey"
                    android:gravity="center_vertical"
                    android:paddingVertical="1dp"
                    android:layout_gravity="center_vertical"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/pwlenght"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:drawablePadding="6dp"
                android:text="@string/warningscharacters"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createPassword"
                app:drawableStartCompat="@drawable/dot" />
            <TextView
                android:id="@+id/pwCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:drawablePadding="6dp"
                android:text="@string/warningSimpleword"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                app:drawableStartCompat="@drawable/dot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwlenght" />
            <TextView
                android:id="@+id/pwDigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:drawablePadding="6dp"
                android:text="@string/warningnumber"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                app:drawableStartCompat="@drawable/dot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwCase" />
            <TextView
                android:id="@+id/pwSpecialCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:drawablePadding="6dp"
                android:text="@string/warningSpecialCharcter"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                app:drawableStartCompat="@drawable/dot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwDigit" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginHorizontal="16dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/grey"
                app:passwordToggleTint="@color/grey"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/pwSpecialCharacter"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:fontFamily="@font/medium"
                    android:hint="@string/repeatPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey"
                    android:gravity="center_vertical"
                    android:paddingVertical="1dp"
                    android:layout_gravity="center_vertical"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/background_button"
                android:enabled="false"
                android:fontFamily="@font/medium"
                android:text="@string/further"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>